--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ html {
   scroll-behavior: smooth;
 }
 
-/* HLAVIČKA - NAVIGACE */
+/* HEADER AND NAVIGATION */
 
 .page-header {
   display: flex;
@@ -50,172 +50,12 @@ html {
   align-items: center;
 }
 
-.navlink {
-  text-decoration: none;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: var(--text);
-  padding: 1rem;
-  margin-right: 1rem;
-}
-
-.navlink:hover {
-  border-bottom: 2px solid var(--text);
-}
 
 .logo {
   flex-grow: 1;
   display: flex;
   justify-content: center;
   height: 50px;
-}
-
-/*TOGGLE SWITCH STYLES*/
-.theme-switch-wrapper {
-  flex-grow: 1;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-}
-
-.theme-switch-text {
-  margin-right: 0.5rem;
-  font-size: 1rem;
-  text-transform: lowercase;
-  color: var(--text);
-}
-
-.theme-switch {
-  display: inline-block;
-  height: 28px;
-  position: relative;
-  width: 45px;
-}
-
-.theme-switch input {
-  display: none;
-}
-
-.slider {
-  background-color: var(--text-running);
-  bottom: 0;
-  cursor: pointer;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: 0.4s;
-}
-
-.slider:before {
-  background-color: #fff;
-  bottom: 4px;
-  content: '';
-  height: 20px;
-  left: 4px;
-  position: absolute;
-  transition: 0.4s;
-  width: 20px;
-}
-
-input:checked+.slider {
-  background-color: #ca2779;
-}
-
-input:checked+.slider:before {
-  transform: translateX(16px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-/* RUNNING LINE */
-
-.running-line-container {
-  height: calc(90% - 2rem);
-  width: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-  z-index: 0;
-  margin-top: 2rem;
-}
-
-.running-line {
-  width: max-content;
-  margin: 0 auto;
-  font-size: 17vh;
-  white-space: nowrap;
-  position: relative;
-  color: var(--text-running);
-  font-weight: bold;
-}
-
-.running-line-text {
-  display: inline-block;
-}
-
-.speed1 {
-  animation: running-line-animation1 160s linear infinite;
-  animation-delay: -80s;
-}
-
-.speed2 {
-  animation: running-line-animation2 160s linear infinite;
-}
-
-.speed3 {
-  animation: running-line-animation1 194s linear infinite;
-  animation-delay: -97s;
-}
-
-.speed4 {
-  animation: running-line-animation2 194s linear infinite;
-}
-
-.speed5 {
-  animation: running-line-animation1 180s linear infinite;
-  animation-delay: -90s;
-}
-
-.speed6 {
-  animation: running-line-animation2 180s linear infinite;
-}
-
-.speed7 {
-  animation: running-line-animation1 210s linear infinite;
-  animation-delay: -105s;
-}
-
-.speed8 {
-  animation: running-line-animation2 210s linear infinite;
-}
-
-@keyframes running-line-animation1 {
-  0% {
-    transform: translateX(100%);
-  }
-
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes running-line-animation2 {
-  0% {
-    transform: translateX(0%);
-  }
-
-  100% {
-    transform: translateX(-200%);
-  }
 }
 
 /* MAIN PICS */
