added some styles for video

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body,
 body {
   background-color: var(--background-main);
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 }
 
 html {
