--- a/src/components/NavLink/style.css
+++ b/src/components/NavLink/style.css
@@ -10,3 +10,12 @@
 .navlink:hover {
   border-bottom: 2px solid var(--text);
 }
+
+
+@media (max-width: 840px) {
+  .navlink {
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin-right: 0.5rem;
+}
+}
