--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: calc(50% - 55px);
 }
 
 
@@ -19,5 +20,24 @@
   flex-grow: 1;
   display: flex;
   justify-content: center;
-  height: 50px;
+}
+
+.logo img {
+  width: 110px;
+}
+
+@media (max-width: 840px) {
+  .page-header {
+    flex-direction: column;
+  }
+
+  .navlink-wrapper {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .logo {
+    padding: 10px;
+    width: 100%;
+  }
 }
