--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,7 @@ body,
 body {
   background-color: var(--background-main);
   font-family: 'Montserrat', sans-serif;
+  user-select: none;
 }
 
 html {
