--- a/src/components/Scanner/style.css
+++ b/src/components/Scanner/style.css
@@ -98,6 +98,33 @@ hr:after {
   border-radius: 20px;
 }
 
+.video-container {
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  top: 6rem;
+  height: 100%;
+  z-index: 1;
+}
+
+.close-video-button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  background-color: var(--background-small);
+  color: var(--text-second);
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+}
+
+.video-mid-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 840px) {
 
   .scanner-container{
