--- a/src/components/Scanner/style.css
+++ b/src/components/Scanner/style.css
@@ -10,14 +10,7 @@
   align-items: center;
 }
 
-.scanner-container-text {
-  font-size: 5vw;
-  width: 40%;
-  font-weight: bold;
-  color: var(--text);
-  margin: 0 5% 0 2.5%;
-  padding: 30px 0;
-}
+
 
 .scanner-container-inputs {
   padding: 30px 0;
@@ -126,8 +119,17 @@ hr:after {
   height: 100%;
 }
 
+.scanner-container-text {
+  font-size: 5vw;
+  width: 40%;
+  font-weight: bold;
+  color: var(--text);
+  margin: 0 5% 0 2.5%;
+  padding: 30px 0;
+}
+
 .brand-info {
-  font-size: 2.5vw;
+  font-size: 2rem;
   text-align: center;
   line-height: 4vw;
 }
