--- a/src/components/Scanner/style.css
+++ b/src/components/Scanner/style.css
@@ -131,7 +131,7 @@ hr:after {
 .brand-info {
   font-size: 2rem;
   text-align: center;
-  line-height: 4vw;
+  line-height: 3rem;
 }
 
 @media (max-width: 840px) {
@@ -142,5 +142,10 @@ hr:after {
 
   .video-container {
     top: 0;
+  }
+
+  .brand-info {
+    font-size: 1.5rem;
+    line-height: 2.2rem;
   }
 }
