--- a/src/components/Scanner/style.css
+++ b/src/components/Scanner/style.css
@@ -10,8 +10,6 @@
   align-items: center;
 }
 
-
-
 .scanner-container-inputs {
   padding: 30px 0;
   flex-grow: 1;
@@ -138,6 +136,16 @@ hr:after {
 
   .scanner-container {
     flex-direction: column;
+    margin: 2rem auto 0;
+  }
+
+  .scanner-container-text {
+    font-size: 5vw;
+    width: 80%;
+    font-weight: bold;
+    color: var(--text);
+    margin: 0 5% 0 2.5%;
+    padding: 30px 0;
   }
 
   .video-container {
