--- a/src/components/NavLink/style.css
+++ b/src/components/NavLink/style.css
@@ -5,7 +5,7 @@
   color: var(--text);
   padding: 1rem;
   margin: 0 0.5rem;
-  border-bottom: 2px solid transparent;
+  border: 2px solid transparent;
 }
 
 .navlink:hover {
@@ -16,6 +16,7 @@
 @media (max-width: 840px) {
   .navlink {
     font-size: 0.9rem;
-    padding: 0.5rem;
+    padding: 0.2rem;
+    margin: 0 0.25rem;;
 }
 }
