--- a/src/components/ThemeSwitch/style.css
+++ b/src/components/ThemeSwitch/style.css
@@ -12,6 +12,7 @@
   font-size: 1rem;
   text-transform: lowercase;
   color: var(--text);
+  padding-bottom: 2px;
 }
 
 .theme-switch {
@@ -67,7 +68,7 @@ input:checked+.slider:before {
   .theme-switch-wrapper {
     width: 100%;
     justify-content: center;
-    padding-top: 5px;
+    padding-top: 0;
   }
 
   .theme-switch-text {
