--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: calc(50% - 55px);
+  width: calc(50% - 70px);
 }
 
 .logo {
@@ -22,12 +22,12 @@
 }
 
 .logo img {
-  width: 130px;
+  width: 140px;
 }
 
 @media (max-width: 840px) {
   .page-header {
-    padding: 10px 15px 0;
+    padding: 15px 8px 0;
   }
 
   .navlink-wrapper {
@@ -37,10 +37,10 @@
   }
 
   .logo {
-    padding: 7px;
+    padding: 0 7px;
   }
 
   .logo img {
-    width: 90%;
+    width: 100%;
   }
 }
