fixed running line text

--- a/src/components/RunningLine/style.css
+++ b/src/components/RunningLine/style.css
@@ -81,3 +81,14 @@
     transform: translateX(-200%);
   }
 }
+
+
+@media (max-width: 840px) {
+  .running-line-container {
+
+    margin-top: 1rem;
+}
+  .running-line {
+    font-size: 15vh;
+  }
+}
