--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,11 @@
 .footer-container {
-  position: absolute;
-  bottom: 20px;
-  left: calc((100% - 311px) / 2)
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 .footer-text {
@@ -10,14 +14,12 @@
 }
 
 @media (max-width: 840px) {
+
+  .footer-container {
+    position: relative;
+  }
+
   .footer-text {
     font-size: 0.7rem;
+  }
 }
-
-.footer-container {
-  left: calc((100% - 222px) / 2)
-}
-}
-
-
-
