--- a/src/components/ThemeSwitch/style.css
+++ b/src/components/ThemeSwitch/style.css
@@ -4,11 +4,11 @@
   display: flex;
   justify-content: end;
   align-items: center;
-  width: calc(50% - 55px);
+  width: calc(50% - 80px);
 }
 
 .theme-switch-text {
-  margin-right: 0.5rem;
+  margin-right: 0.7rem;
   font-size: 1rem;
   text-transform: lowercase;
   color: var(--text);
@@ -19,7 +19,7 @@
   display: inline-block;
   height: 28px;
   position: relative;
-  width: 45px;
+  width: 50px;
 }
 
 .theme-switch input {
@@ -53,7 +53,7 @@ input:checked+.slider {
 }
 
 input:checked+.slider:before {
-  transform: translateX(16px);
+  transform: translateX(22px);
 }
 
 .slider.round {
@@ -73,17 +73,23 @@ input:checked+.slider:before {
 
   .theme-switch-text {
     font-size: 0.8rem;
+    margin-right: 0.4rem;
+    text-align: end;
   }
 
   .theme-switch {
     height: 20px;
-    width: 40px;
+    width: 36px;
   }
 
   .slider:before {
-    bottom: 2.5px;
+    bottom: 3px;
     left: 3px;
-    height: 15px;
-    width: 15px;
+    height: 14px;
+    width: 14px;
+  }
+
+  input:checked+.slider:before {
+    transform: translateX(16px);
   }
 }
