--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --background-main: #ebebeb;
-  --text: #242223;
+  --text: #2a2a2a;
   --text-running: #a5a5a5;
   --background-small: #2a2a2a;
   --text-second: #ebebeb;
@@ -12,10 +12,10 @@
 
 :root[data-theme='dark'] {
   --background-main: #2a2a2a;
-  --text: #a6a6a6;
+  --text: #b7b7b7;
   --text-running: #a5a5a5;
   --background-small: #ebebeb;
-  --text-second: #242223;
+  --text-second: #2a2a2a;
 }
 
 /* BASIC STYLES */
