--- a/src/components/Scanner/style.css
+++ b/src/components/Scanner/style.css
@@ -4,10 +4,6 @@
   line-height: 3.2rem;
 }
 
-.brand-url {
-  color: #ca2779;
-}
-
 .green {
   color: #35c07a;
 }
@@ -16,9 +12,47 @@
   color: #ca2779;
 }
 
+.redirect-button {
+  height: 40px;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 1;
+  border-radius: 500px;
+  border: 1px solid transparent;
+  letter-spacing: 1px;
+  min-width: 120px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 600;
+  text-align: center;
+  padding: 14px 14px;
+  color: var(--text);
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: .3s;
+  box-shadow: inset 0 0 0 2px var(--text);
+  background-color: transparent;
+  margin-top: 1rem;
+}
+
+.findout-button:hover {
+  color: var(--text-second);
+  background-color: var(--text);
+}
+
 @media (max-width: 840px) {
   .brand-info {
     font-size: 1.2rem;
     line-height: 1.8rem;
+  }
+
+  .redirect-button {
+    margin-top: 0.6rem;
+    font-size: 0.7rem;
+    height: 40px;
+    letter-spacing: 0.3px;
+    min-width: 110px;
+    padding: 10px;
   }
 }
